# cabal-field-format

./: CHANGELOG.md  README.md  cabal-field-format.cabal
src/Distribution/: CabalSpecVersion.hs  Parsec.hs  Pretty.hs  UTF8.hs
src/Distribution/Compat/: CharParsing.hs  DList.hs  Parsing.hs
src/Distribution/Fields/: Field.hs  Lexer.x  LexerMonad.hs  ParseResult.hs  Parser.hs  Pretty.hs
src/Distribution/Parsec/: Error.hs  FieldLineStream.hs  Position.hs  Warning.hs
