cabal-version:   3.0
name:            cabal-field-format
version:         0.1.0.0
license:         NONE
author:          Andrea Bedini
maintainer:      andrea@andreabedini.com
build-type:      Simple
extra-doc-files: CHANGELOG.md


library
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:
      array      >= 0.4.0.1  && < 0.6,
      base       >= 4.11     && < 5,
      binary     >= 0.7      && < 0.9,
      bytestring >= 0.10.0.0 && < 0.13,
      containers >= 0.5.0.0  && < 0.8,
      deepseq    >= 1.3.0.1  && < 1.6,
      directory  >= 1.2      && < 1.4,
      filepath   >= 1.3.0.1  && < 1.6,
      mtl        >= 2.1      && < 2.4,
      parsec     >= 3.1.13.0 && < 3.2,
      pretty     >= 1.1.1    && < 1.2,
      text       (>= 1.2.3.0 && < 1.3) || (>= 2.0 && < 2.2),
      time       >= 1.4.0.1  && < 1.15,
      -- transformers-0.4.0.0 doesn't have record syntax e.g. for Identity
      -- See also https://github.com/ekmett/transformers-compat/issues/35
      transformers (>= 0.3      && < 0.4) || (>=0.4.1.0 && <0.7)

    ghc-options:
      -Wall
      -fno-ignore-asserts
      -fwarn-tabs
      -fwarn-incomplete-uni-patterns
      -fwarn-incomplete-record-updates
      -fno-warn-unticked-promoted-constructors

    if impl(ghc >= 8.0)
      ghc-options: -Wcompat -Wnoncanonical-monad-instances

    if impl(ghc >= 8.0) && impl(ghc < 8.8)
      ghc-options: -Wnoncanonical-monadfail-instances

    build-tool-depends: alex:alex

    exposed-modules:
      Distribution.CabalSpecVersion
      Distribution.Compat.CharParsing
      Distribution.Compat.DList
      Distribution.Compat.Parsing
      Distribution.Fields
      Distribution.Fields.Field
      Distribution.Fields.Lexer
      Distribution.Fields.LexerMonad
      Distribution.Fields.ParseResult
      Distribution.Fields.Parser
      Distribution.Fields.Pretty
      Distribution.Parsec
      Distribution.Parsec.Error
      Distribution.Parsec.FieldLineStream
      Distribution.Parsec.Position
      Distribution.Parsec.Warning
      Distribution.Pretty
      Distribution.UTF8
